--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python==4.11.0.86
-moviepy==1.0.3
-numpy==2.0.2
-python-dotenv==1.1.0
-Pillow==9.5.0 
+opencv-python>=4.5.0
+moviepy>=1.0.3
+numpy>=1.20.0
+python-dotenv>=0.19.0
+Pillow>=8.0.0 
