--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ opencv-python>=4.5.0
 moviepy==1.0.3
 numpy>=1.20.0
 python-dotenv>=0.19.0
-Pillow>=8.0.0 
+Pillow>=8.0.0
+Flask>=2.0.0
+werkzeug>=2.0.0 
