スライド速度を環境変数で設定できるように機能追加

--- a/.env.sample
+++ b/.env.sample
@@ -24,6 +24,8 @@ BACKGROUND_COLOR=255,255,255
 # アニメーションの設定
 ANIMATION_DURATION=4
 FPS=30
+# スライド速度（1.0が通常速度、2.0は2倍速、0.5は半分速度）
+SLIDE_SPEED=1.0
 
 # 出力設定
 OUTPUT_FILENAME=output/sliding_tiles.mp4 
