動画の枠サイズを指定できる機能を追加: HD(1920x1080)とHD_HALF(1920x540)のプリセットに対応

--- a/.env.sample
+++ b/.env.sample
@@ -27,5 +27,15 @@ FPS=30
 # スライド速度（1.0が通常速度、2.0は2倍速、0.5は半分速度）
 SLIDE_SPEED=1.0
 
+# 動画の枠サイズ設定
+# 'AUTO': グリッドサイズから自動計算（デフォルト）
+# 'HD': 1920x1080 (フルHD)
+# 'HD_HALF': 1920x540 (HD半分の高さ)
+# 'CUSTOM': 下記のカスタムサイズを使用
+FRAME_SIZE_PRESET=AUTO
+# カスタムサイズ（FRAME_SIZE_PRESET=CUSTOMの場合に使用）
+FRAME_WIDTH=1920
+FRAME_HEIGHT=1080
+
 # 出力設定
 OUTPUT_FILENAME=output/sliding_tiles.mp4 
