--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,10 @@ opencv-python>=4.5.0
 moviepy==1.0.3
 numpy>=1.20.0
 python-dotenv>=0.19.0
-Pillow>=8.0.0 
+Pillow>=8.0.0
+psutil>=5.9.0       # システムリソース監視用
+pyobjc>=9.0.1       # Macネイティブ機能へのアクセス用（Metal GPUなど）
+tqdm>=4.64.0        # プログレスバー表示用
+ffmpeg-python>=0.2.0
+logging-utils>=0.0.13
+jsonschema>=4.17.3 
